# auto-review

./: .env.example  .gitignore  README-zh.md  README.md  ecosystem.config.cjs  ecosystem.config.js  package-lock.json  package.json  pyproject.toml
scripts/: run_review.sh  start_listener.sh
src/: claude-fix.ts  claude_fix.py  config.py  config.ts  gemini-review.ts  gemini_review.py  gitlab-client.ts  gitlab_client.py  index.ts  runner.py  runner.ts  webhook-server.ts  webhook_server.py
tests/fixtures/: mr_diff_sample.json  mr_webhook.json
